--- a/RealmModelGenerator/TitleCell.xib
+++ b/RealmModelGenerator/TitleCell.xib
@@ -32,7 +32,7 @@
                         <constraint firstAttribute="height" constant="20" id="eL4-Qh-HOE"/>
                         <constraint firstAttribute="width" constant="20" id="shO-2l-2lL"/>
                     </constraints>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="E" drawsBackground="YES" id="6T6-xB-gbP">
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="T" drawsBackground="YES" id="6T6-xB-gbP">
                         <font key="font" size="13" name="Menlo-Regular"/>
                         <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
