--- a/RealmModelGenerator/TitleCell.xib
+++ b/RealmModelGenerator/TitleCell.xib
@@ -8,26 +8,17 @@
         <customObject id="-2" userLabel="File's Owner" customClass="TitleCell" customModule="RealmModelGenerator" customModuleProvider="target">
             <connections>
                 <outlet property="letterTextField" destination="BzI-NG-lrh" id="08w-hy-oKG"/>
-                <outlet property="textField" destination="ApS-rj-fAc" id="4q3-Fo-e1q"/>
                 <outlet property="titleTextField" destination="ApS-rj-fAc" id="xRV-c1-N2A"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="257" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="257" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ApS-rj-fAc">
-                    <rect key="frame" x="46" y="15" width="193" height="20"/>
-                    <textFieldCell key="cell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" title="Title" id="ieK-RM-G6c">
-                        <font key="font" size="13" name="Menlo-Regular"/>
-                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BzI-NG-lrh">
-                    <rect key="frame" x="20" y="15" width="20" height="20"/>
+                    <rect key="frame" x="8" y="10" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="eL4-Qh-HOE"/>
                         <constraint firstAttribute="width" constant="20" id="shO-2l-2lL"/>
@@ -44,15 +35,21 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </textField>
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ApS-rj-fAc">
+                    <rect key="frame" x="34" y="11" width="217" height="19"/>
+                    <textFieldCell key="cell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" title="Title" id="ieK-RM-G6c">
+                        <font key="font" size="13" name="Menlo-Regular"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
             </subviews>
             <constraints>
-                <constraint firstItem="BzI-NG-lrh" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="20" id="fgK-63-iOw"/>
-                <constraint firstItem="BzI-NG-lrh" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="15" id="gIO-Vx-bi8"/>
-                <constraint firstItem="ApS-rj-fAc" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="15" id="h1C-pX-WAO"/>
-                <constraint firstAttribute="bottom" secondItem="ApS-rj-fAc" secondAttribute="bottom" constant="15" id="iHT-mb-1vY"/>
-                <constraint firstItem="ApS-rj-fAc" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="48" id="iLy-If-AOc"/>
-                <constraint firstAttribute="trailing" secondItem="ApS-rj-fAc" secondAttribute="trailing" constant="20" id="key-ah-ZIX"/>
-                <constraint firstAttribute="bottom" secondItem="BzI-NG-lrh" secondAttribute="bottom" constant="15" id="xiD-Dm-ZCB"/>
+                <constraint firstItem="ApS-rj-fAc" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="7w0-FB-lsf"/>
+                <constraint firstItem="BzI-NG-lrh" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="Nec-CO-4ZY"/>
+                <constraint firstItem="BzI-NG-lrh" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="8" id="fgK-63-iOw"/>
+                <constraint firstAttribute="trailing" secondItem="ApS-rj-fAc" secondAttribute="trailing" constant="8" id="key-ah-ZIX"/>
+                <constraint firstItem="ApS-rj-fAc" firstAttribute="leading" secondItem="BzI-NG-lrh" secondAttribute="trailing" constant="8" id="pMS-ev-j8K"/>
             </constraints>
             <point key="canvasLocation" x="600.5" y="618"/>
         </customView>
