--- a/RealmModelGenerator/EntitiesView.xib
+++ b/RealmModelGenerator/EntitiesView.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9532"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="EntitiesView">
@@ -24,24 +23,54 @@
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Entities" id="fVo-mV-pHZ">
                         <font key="font" size="13" name="Menlo-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="42" horizontalPageScroll="10" verticalLineScroll="42" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cf1-q4-9Wx">
-                    <rect key="frame" x="0.0" y="27" width="260" height="289"/>
-                    <clipView key="contentView" id="l2V-4a-1QL">
-                        <rect key="frame" x="0.0" y="0.0" width="260" height="289"/>
+                <customView translatesAutoresizingMaskIntoConstraints="NO" id="PYy-vs-mdu" userLabel="Controls">
+                    <rect key="frame" x="0.0" y="0.0" width="260" height="30"/>
+                    <subviews>
+                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xzm-mU-UMd">
+                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSAddTemplate" imagePosition="only" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="border" inset="2" id="h0z-hF-EHX">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                        </button>
+                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JgL-H7-y5y">
+                            <rect key="frame" x="29" y="0.0" width="30" height="30"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSRemoveTemplate" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" inset="2" id="glk-vR-4Y7">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="RrW-ei-6wj"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <integer key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                            <color key="value" red="0.62352941176470589" green="0.62352941176470589" blue="0.62352941176470589" alpha="1" colorSpace="calibratedRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </customView>
+                <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="34" horizontalPageScroll="10" verticalLineScroll="34" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cf1-q4-9Wx">
+                    <rect key="frame" x="0.0" y="30" width="260" height="286"/>
+                    <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="l2V-4a-1QL">
+                        <rect key="frame" x="0.0" y="0.0" width="260" height="286"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="40" viewBased="YES" id="ITD-bR-0y2">
-                                <rect key="frame" x="0.0" y="0.0" width="260" height="289"/>
+                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="32" viewBased="YES" floatsGroupRows="NO" id="ITD-bR-0y2">
+                                <rect key="frame" x="0.0" y="0.0" width="260" height="0.0"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
-                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
                                     <tableColumn width="257" minWidth="40" maxWidth="1000" id="XbA-49-V5S">
-                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
+                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Entities">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -54,7 +83,7 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <customView identifier="TitleCell" id="LLX-Y0-NYF" customClass="TitleCell" customModule="RealmModelGenerator" customModuleProvider="target">
-                                                <rect key="frame" x="1" y="1" width="257" height="40"/>
+                                                <rect key="frame" x="1" y="1" width="257" height="32"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="color" keyPath="letterColor">
@@ -73,10 +102,10 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                     </clipView>
                     <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="oXj-vq-byD">
-                        <rect key="frame" x="1" y="118.97619807720184" width="237.94747161865234" height="15"/>
+                        <rect key="frame" x="1" y="118" width="238" height="15"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="65z-kH-bnB">
@@ -84,47 +113,13 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                 </scrollView>
-                <customView translatesAutoresizingMaskIntoConstraints="NO" id="PYy-vs-mdu">
-                    <rect key="frame" x="0.0" y="0.0" width="260" height="30"/>
-                    <subviews>
-                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Xzm-mU-UMd">
-                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="Xzm-mU-UMd" secondAttribute="height" multiplier="1:1" id="YEN-0x-JAO"/>
-                            </constraints>
-                            <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="NSAddTemplate" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyDown" inset="2" id="h0z-hF-EHX">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                        </button>
-                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="JgL-H7-y5y">
-                            <rect key="frame" x="30" y="0.0" width="30" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="JgL-H7-y5y" secondAttribute="height" multiplier="1:1" id="X9y-Cb-zJo"/>
-                            </constraints>
-                            <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="NSRemoveTemplate" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyDown" inset="2" id="glk-vR-4Y7">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                        </button>
-                    </subviews>
-                    <constraints>
-                        <constraint firstItem="Xzm-mU-UMd" firstAttribute="leading" secondItem="PYy-vs-mdu" secondAttribute="leading" id="7RI-wP-5SL"/>
-                        <constraint firstItem="JgL-H7-y5y" firstAttribute="top" secondItem="PYy-vs-mdu" secondAttribute="top" id="Gnd-IA-dcB"/>
-                        <constraint firstAttribute="bottom" secondItem="JgL-H7-y5y" secondAttribute="bottom" id="Mkw-A6-kEw"/>
-                        <constraint firstAttribute="height" constant="30" id="RrW-ei-6wj"/>
-                        <constraint firstAttribute="bottom" secondItem="Xzm-mU-UMd" secondAttribute="bottom" id="fLT-2R-lnl"/>
-                        <constraint firstItem="JgL-H7-y5y" firstAttribute="leading" secondItem="Xzm-mU-UMd" secondAttribute="trailing" id="kVL-WK-rOM"/>
-                        <constraint firstItem="Xzm-mU-UMd" firstAttribute="top" secondItem="PYy-vs-mdu" secondAttribute="top" id="lcj-53-rjQ"/>
-                    </constraints>
-                </customView>
             </subviews>
             <constraints>
                 <constraint firstItem="cf1-q4-9Wx" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="1fx-ql-RYu"/>
                 <constraint firstAttribute="bottom" secondItem="PYy-vs-mdu" secondAttribute="bottom" id="DUH-Oz-8en"/>
                 <constraint firstItem="TSS-KQ-ebZ" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="8" id="EEv-GN-zbl"/>
                 <constraint firstAttribute="trailing" secondItem="PYy-vs-mdu" secondAttribute="trailing" id="Egf-HU-Rex"/>
-                <constraint firstItem="PYy-vs-mdu" firstAttribute="top" secondItem="cf1-q4-9Wx" secondAttribute="bottom" constant="-3" id="UVh-Kp-F97"/>
+                <constraint firstItem="PYy-vs-mdu" firstAttribute="top" secondItem="cf1-q4-9Wx" secondAttribute="bottom" id="UVh-Kp-F97"/>
                 <constraint firstAttribute="trailing" secondItem="cf1-q4-9Wx" secondAttribute="trailing" id="Xr5-M8-Dzo"/>
                 <constraint firstItem="cf1-q4-9Wx" firstAttribute="top" secondItem="TSS-KQ-ebZ" secondAttribute="bottom" constant="8" id="fYu-Bp-2pH"/>
                 <constraint firstItem="PYy-vs-mdu" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="jWD-6i-3Sy"/>
