--- a/RealmModelGenerator/TitleCell.xib
+++ b/RealmModelGenerator/TitleCell.xib
@@ -14,11 +14,19 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="257" height="40"/>
+            <rect key="frame" x="0.0" y="0.0" width="257" height="32"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ApS-rj-fAc">
+                    <rect key="frame" x="34" y="7" width="217" height="19"/>
+                    <textFieldCell key="cell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" title="Title" id="ieK-RM-G6c">
+                        <font key="font" size="13" name="Menlo-Regular"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BzI-NG-lrh">
-                    <rect key="frame" x="8" y="10" width="20" height="20"/>
+                    <rect key="frame" x="8" y="6" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="eL4-Qh-HOE"/>
                         <constraint firstAttribute="width" constant="20" id="shO-2l-2lL"/>
@@ -29,19 +37,10 @@
                         <color key="backgroundColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                     <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="wantsLayer" value="YES"/>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                             <integer key="value" value="4"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
-                </textField>
-                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ApS-rj-fAc">
-                    <rect key="frame" x="34" y="11" width="217" height="19"/>
-                    <textFieldCell key="cell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" title="Title" id="ieK-RM-G6c">
-                        <font key="font" size="13" name="Menlo-Regular"/>
-                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
                 </textField>
             </subviews>
             <constraints>
